# smartheater

./: .gitmodules
src/: CMakeLists.txt  conf.h  main.cpp
src/hwiface/: hwiface.cpp  hwiface.h  indication.cpp  indication.h
src/hwiface/ADC/: adc.cpp  adc.h
src/mainlogic/: core.cpp  core.h
src/memory/: memory.cpp  memory.h  polymorphmemory.h  settings.cpp  settings.h
src/net/I2C/: usi.cpp  usi.h  usiTwiSlave.cpp
src/settings/: corestateserver.cpp  corestateserver.h  eeprom.cpp  eeprom.h  mainmem.h  memory.cpp  memory.h  settings.cpp  settings.h
src/temp/arduino_routine/: WConstants.h  WProgram.h  millis.cpp  pins_arduino.h  routine.cpp
src/temp/hwiface/: WConstants.h  WProgram.h  hwiface.cpp  pins_arduino.h
